package org.dacss.projectinitai.messages;

/**
 * <h1>{@link MessageAction}</h1>
 * Enum for message actions.
 */
public enum MessageAction {
    REQUEST,
    RESPONSE,
    THUMBS_UP,
    THUMBS_DOWN,
    RETRY,
    TRASH
}
